// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteContentElement 1`] = `
Object {
  "children": Array [
    Object {
      "id": "1",
      "text": "",
    },
  ],
  "id": "0",
}
`;

exports[`materializePath 1`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [],
    "to": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": "0",
              "text": "a",
            },
          ],
          "id": "1",
        },
      ],
      "id": "2",
    },
  },
}
`;

exports[`materializePath 2`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "0",
                "text": "a",
              },
            ],
            "id": "1",
          },
        ],
        "id": "2",
      },
    ],
    "to": Object {
      "children": Array [
        Object {
          "id": "0",
          "text": "a",
        },
      ],
      "id": "1",
    },
  },
}
`;

exports[`materializePath 3`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "0",
                "text": "a",
              },
            ],
            "id": "1",
          },
        ],
        "id": "2",
      },
      Object {
        "children": Array [
          Object {
            "id": "0",
            "text": "a",
          },
        ],
        "id": "1",
      },
    ],
    "to": Object {
      "id": "0",
      "text": "a",
    },
  },
}
`;

exports[`materializePath 4`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "0",
                "text": "a",
              },
            ],
            "id": "1",
          },
        ],
        "id": "2",
      },
      Object {
        "children": Array [
          Object {
            "id": "0",
            "text": "a",
          },
        ],
        "id": "1",
      },
    ],
    "to": Object {
      "offset": 0,
      "text": Object {
        "id": "0",
        "text": "a",
      },
    },
  },
}
`;

exports[`materializePath 5`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "0",
                "text": "a",
              },
            ],
            "id": "1",
          },
        ],
        "id": "2",
      },
      Object {
        "children": Array [
          Object {
            "id": "0",
            "text": "a",
          },
        ],
        "id": "1",
      },
    ],
    "to": Object {
      "offset": 1,
      "text": Object {
        "id": "0",
        "text": "a",
      },
    },
  },
}
`;

exports[`materializePath 6`] = `
Object {
  "_tag": "None",
}
`;

exports[`materializePath 7`] = `
Object {
  "_tag": "None",
}
`;

exports[`materializePath 8`] = `
Object {
  "_tag": "None",
}
`;

exports[`materializePath 9`] = `
Object {
  "_tag": "None",
}
`;

exports[`normalizeElement do not add children 1`] = `
Object {
  "children": Array [],
  "id": "0",
}
`;

exports[`normalizeElement do not remove children 1`] = `
Object {
  "children": Array [],
  "id": "0",
}
`;

exports[`normalizeElement do not remove children 2`] = `
Object {
  "children": Array [
    Object {
      "id": "2",
      "text": "",
    },
  ],
  "id": "1",
}
`;

exports[`normalizeElement do not remove children 3`] = `
Object {
  "children": Array [
    Object {
      "id": "4",
      "text": ".",
    },
  ],
  "id": "3",
}
`;

exports[`normalizeElement merges adjacent texts 1`] = `
Object {
  "children": Array [
    Object {
      "id": "1",
      "text": "ab",
    },
    Object {
      "children": Array [
        Object {
          "id": "4",
          "text": "abc",
        },
        Object {
          "children": Array [
            Object {
              "id": "8",
              "text": "a",
            },
            Object {
              "children": Array [],
              "id": "9",
            },
            Object {
              "id": "10",
              "text": "bc",
            },
          ],
          "id": "7",
        },
      ],
      "id": "3",
    },
    Object {
      "id": "12",
      "text": "a",
    },
    Object {
      "id": "13",
      "text": "",
    },
    Object {
      "id": "14",
      "text": "b",
    },
  ],
  "id": "0",
}
`;
